--- a/index.html
+++ b/index.html
@@ -40,47 +40,52 @@
         </div>
         <div id="content_layout">
             <div id="sidebar">
-                <div id="yesterdayDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-arrow-left</title><path d="M19 3H18V1H16V3H8V1H6V3H5C3.89 3 3 3.89 3 5V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.89 20.1 3 19 3M19 19H5V8H19V19M12 10V12H16V15H12V17L8 13.5L12 10Z" /></svg>
-                    </span>
-                    <span>Yesterday</span>
+                <div id="displayByTime">
+                    <div id="yesterdayDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-arrow-left</title><path d="M19 3H18V1H16V3H8V1H6V3H5C3.89 3 3 3.89 3 5V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.89 20.1 3 19 3M19 19H5V8H19V19M12 10V12H16V15H12V17L8 13.5L12 10Z" /></svg>
+                        </span>
+                        <span>Yesterday</span>
+                    </div>
+                    <div id="todayDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar</title><path d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" /></svg>
+                        </span>
+                        <span>Today</span>
+                    </div>
+                    <div id="tomorrowDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-arrow-right</title><path d="M19 3H18V1H16V3H8V1H6V3H5C3.89 3 3 3.89 3 5V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.89 20.1 3 19 3M19 19H5V8H19V19M12 17V15H8V12H12V10L16 13.5L12 17Z" /></svg>
+                        </span>
+                        <span>Tomorrow</span>
+                    </div>
+                    <div id="next7DaysDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-plus</title><path d="M19 19V8H5V19H19M16 1H18V3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.89 21 3 20.1 3 19V5C3 3.89 3.89 3 5 3H6V1H8V3H16V1M11 9.5H13V12.5H16V14.5H13V17.5H11V14.5H8V12.5H11V9.5Z" /></svg>
+                        </span>
+                        <span>Next 7 days</span>
+                    </div>
+                    <div id="thisMonthDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-month</title><path d="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z" /></svg>
+                        </span>
+                        <span>This Month</span>
+                    </div>
+                    <div id="thisQuarterDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-week-outline</title><path d="M5 3H6V1H8V3H16V1H18V3H19C20.11 3 21 3.89 21 5V19C21 20.1 20.11 21 19 21H5C3.9 21 3 20.11 3 19V5C3 3.89 3.9 3 5 3M5 19H19V9H5V19M5 7H19V5H5V7M17 11V13H7V11H17" /></svg>
+                        </span>
+                        <span>This Quarter</span>
+                    </div>
+                    <div id="thisYearDiv">
+                        <span class="svg-span">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>timetable</title><path d="M14,12H15.5V14.82L17.94,16.23L17.19,17.53L14,15.69V12M4,2H18A2,2 0 0,1 20,4V10.1C21.24,11.36 22,13.09 22,15A7,7 0 0,1 15,22C13.09,22 11.36,21.24 10.1,20H4A2,2 0 0,1 2,18V4A2,2 0 0,1 4,2M4,15V18H8.67C8.24,17.09 8,16.07 8,15H4M4,8H10V5H4V8M18,8V5H12V8H18M4,13H8.29C8.63,11.85 9.26,10.82 10.1,10H4V13M15,10.15A4.85,4.85 0 0,0 10.15,15C10.15,17.68 12.32,19.85 15,19.85A4.85,4.85 0 0,0 19.85,15C19.85,12.32 17.68,10.15 15,10.15Z" /></svg>
+                        </span>
+                        <span>This Year</span>
+                    </div>
                 </div>
-                <div id="todayDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar</title><path d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" /></svg>
-                    </span>
-                    <span>Today</span>
-                </div>
-                <div id="tomorrowDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-arrow-right</title><path d="M19 3H18V1H16V3H8V1H6V3H5C3.89 3 3 3.89 3 5V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.89 20.1 3 19 3M19 19H5V8H19V19M12 17V15H8V12H12V10L16 13.5L12 17Z" /></svg>
-                    </span>
-                    <span>Tomorrow</span>
-                </div>
-                <div id="next7DaysDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-plus</title><path d="M19 19V8H5V19H19M16 1H18V3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.89 21 3 20.1 3 19V5C3 3.89 3.89 3 5 3H6V1H8V3H16V1M11 9.5H13V12.5H16V14.5H13V17.5H11V14.5H8V12.5H11V9.5Z" /></svg>
-                    </span>
-                    <span>Next 7 days</span>
-                </div>
-                <div id="thisMonthDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-month</title><path d="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z" /></svg>
-                    </span>
-                    <span>This Month</span>
-                </div>
-                <div id="thisQuarterDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-week-outline</title><path d="M5 3H6V1H8V3H16V1H18V3H19C20.11 3 21 3.89 21 5V19C21 20.1 20.11 21 19 21H5C3.9 21 3 20.11 3 19V5C3 3.89 3.9 3 5 3M5 19H19V9H5V19M5 7H19V5H5V7M17 11V13H7V11H17" /></svg>
-                    </span>
-                    <span>This Quarter</span>
-                </div>
-                <div id="thisYearDiv">
-                    <span class="svg-span">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>timetable</title><path d="M14,12H15.5V14.82L17.94,16.23L17.19,17.53L14,15.69V12M4,2H18A2,2 0 0,1 20,4V10.1C21.24,11.36 22,13.09 22,15A7,7 0 0,1 15,22C13.09,22 11.36,21.24 10.1,20H4A2,2 0 0,1 2,18V4A2,2 0 0,1 4,2M4,15V18H8.67C8.24,17.09 8,16.07 8,15H4M4,8H10V5H4V8M18,8V5H12V8H18M4,13H8.29C8.63,11.85 9.26,10.82 10.1,10H4V13M15,10.15A4.85,4.85 0 0,0 10.15,15C10.15,17.68 12.32,19.85 15,19.85A4.85,4.85 0 0,0 19.85,15C19.85,12.32 17.68,10.15 15,10.15Z" /></svg>
-                    </span>
-                    <span>This Year</span>
+                <div id="displayByProjects">
+                    
                 </div>
             </div>
             <div id="tasks_display"></div>
